--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <img src="images\Reddit-logo.jpg" alt="" class="reddit-share">
       <img src="images\twitter-share-button.png" alt="" class="twitter-share">
 
+
     <div class="social-media">
       <ul class="social-icon">
         <li>
@@ -42,6 +43,14 @@
 
         <li>
           <a href="https://twitter.com/" target="_blank"> <i class="fa fa-twitter" ></i> </a>
+        </li>
+
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"> <i class="fa fa-instagram" ></i> </a>
+        </li>
+
+        <li>
+          <a href="https://www.snapchat.com/" target="_blank"> <i class="fa fa-snapchat" ></i> </a>
         </li>
       </ul>
     </div>
