--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Our National Flag </title>
+    <title> National Flag </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Slabo+27px&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 class="heading"> Our National Flag </h1>
+    <h1 class="heading"> National Flag </h1>
 
     <p class="parr"> The national flag of Bangladesh, was adopted officially on 17 January 1972. It consists of a red disc on top of a dark green banner.
       The red disc is offset slightly toward the hoist so that it appears centered when the flag is flying. While there are many interpretations,
